monitoring/controllers/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: monitoring
    labels:
        pod-security.kubernetes.io/enforce: privileged
        pod-security.kubernetes.io/enforce-version: latest
