monitoring/controllers/kube-prometheus-stack/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: grafana
    namespace: monitoring
    annotations:
        external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
    parentRefs:
        - name: gateway
          namespace: istio-ingress
          sectionName: wildcard-https
    hostnames:
        - grafana.thisratis.gay
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: "/"
          backendRefs:
              - name: kube-prometheus-stack-grafana
                port: 80
